--- a/testdata/scalar/regexp.spec.yaml
+++ b/testdata/scalar/regexp.spec.yaml
@@ -4,35 +4,35 @@ content:
     content:
       - name: accept email
         text:
-          - text: 'a.b.c@0.23.z'
-          - text: 'a@b.c'
+          - "a.b.c@0.23.z"
+          - "a@b.c"
       - name: reject non-email
         text:
-          - text: '.a@b.c'
-          - text: 'a@b'
+          - ".a@b.c"
+          - "a@b"
   - name: _regex empty
     expression: '_regex: "^$"'
     content:
       - name: accept the empty string
         text: '""'
       - name: reject letters
-        text: 'a'
+        text: "a"
       - name: reject strings containing a single space
-        text: ' '
+        text: " "
   - name: _regex non-empty word
     expression: '_regex: "[a-z]+"'
     content:
       - name: accept non-empty word
         text:
-          - 'a'
-          - 'word'
+          - "a"
+          - "word"
       - name: reject if not a string
         text:
-          - '1'
-          - '1.1'
-          - '[]'
-          - 'null'
-          - 'true'
-          - '{}'
+          - "1"
+          - "1.1"
+          - "[]"
+          - "null"
+          - "true"
+          - "{}"
       - name: reject the empty string
         text: '""'
