--- a/testdata/schema/mergeChecker.spec.yaml
+++ b/testdata/schema/mergeChecker.spec.yaml
@@ -1,4 +1,4 @@
-target: 'lidySchemaDocument'
+box: "lidySchemaDocument"
 content:
   - name: _merge requires identifiers to refer to mapCheckers
     content:
