--- a/testdata/collection/min_max_nb.spec.yaml
+++ b/testdata/collection/min_max_nb.spec.yaml
@@ -5,25 +5,25 @@ content:
       _listOf: any
       ${checker}
     checker:
-      - '_min: 2'
-      - '_max: 2'
-      - '_nb: 2'
+      - "_min: 2"
+      - "_max: 2"
+      - "_nb: 2"
     content:
       - name: accept when there's the right number of entries
-        text: '[a b]'
+        text: "[a b]"
   - name: _min_max_nb for _mapOf
     expressionTemplate: |-
       _mapOf: any
       ${checker}
-    text: '{ ka: va, kb: vb }'
+    text: "{ ka: va, kb: vb }"
     content:
       - name: accept when there's the right number of entries
         checker:
-          - '_min: 2'
-          - '_max: 2'
-          - '_nb: 2'
+          - "_min: 2"
+          - "_max: 2"
+          - "_nb: 2"
       - name: reject when the number requirement is wrong
         checker:
-          - '_min: 3'
-          - '_max: 1'
-          - '_nb: 3'
+          - "_min: 3"
+          - "_max: 1"
+          - "_nb: 3"
