--- a/testdata/scalar/in.spec.yaml
+++ b/testdata/scalar/in.spec.yaml
@@ -1,22 +1,22 @@
 content:
   - name: _in
-    expression: '_in: [a, present, b, c]'
+    expression: "_in: [a, present, b, c]"
     content:
-      - name: 'accept'
-        text: 'present'
-      - name: 'reject'
-        text: 'missing'
+      - name: "accept"
+        text: "present"
+      - name: "reject"
+        text: "missing"
   - name: _in rejects everything when empty
-    expression: '_in: []'
+    expression: "_in: []"
     content:
-      - name: 'reject'
+      - name: "reject"
         text:
-          - '0.2'
-          - '2'
-          - '[]'
-          - '[a]'
-          - 'a'
-          - 'null'
-          - 'true'
-          - '{ k: v }'
-          - '{}'
+          - "0.2"
+          - "2"
+          - "[]"
+          - "[a]"
+          - "a"
+          - "null"
+          - "true"
+          - "{ k: v }"
+          - "{}"
