lidy go rewrite misc fixes

--- a/testdata/schema/expression.spec.yaml
+++ b/testdata/schema/expression.spec.yaml
@@ -149,7 +149,7 @@ content:
       - name: accept valid forms
         text:
           - "_oneOf: []"
-          - "_oneOf: [string, int, { _map }]"
+          - "_oneOf: [string, int, { _map: {} }]"
           - "_oneOf: [string]"
       - name: reject invalid forms
         errorContains: "_oneOf"
