--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -2,12 +2,11 @@ on: push
 name: Test-and-build
 jobs:
   checks:
-    name: run
-    runs-on: ubuntu-latest
+    name: run tests
     steps:
-    - uses: actions/checkout@master
-
-    - name: run
-      uses: cedrickring/golang-action@1.5.2
-      env:
-        GO111MODULE: "on"
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.21.1"
+      - working-directory: ./go/lidy
+        run: go test
