--- a/testdata/schema/mergeChecker.spec.yaml
+++ b/testdata/schema/mergeChecker.spec.yaml
@@ -63,8 +63,7 @@ content:
               - bb
               - cc
               - { _map: { kd: aa } }
-      - flag: PENDING
-        name: reject if the self-reference is too direct
+      - name: reject if the self-reference is too direct
         content:
           - text: |-
               main: aaa
