--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -8,5 +8,4 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: "1.21.1"
-      - working-directory: ./go/lidy
-        run: go test
+      - run: go test
