--- a/testdata/scalar/range.spec.yaml
+++ b/testdata/scalar/range.spec.yaml
@@ -19,6 +19,12 @@ content:
             text: ["1", "2"]
           - name: reject
             text: ["0", "3", "1.3", "2.2"]
+      - expression: "_range: 0 <= int"
+        content:
+          - name: accept
+            text: ["0", "1", "2", "65535"]
+          - name: reject
+            text: ["-1", "-65535", "1.1", "a", "[]", "null"]
   - name: _range float
     content:
       - expression: "_range: 0.0 <= float < 10.0"
@@ -33,3 +39,9 @@ content:
             text: ["0.1", "0.9", "1.0"]
           - name: reject
             text: ["0.0", "1.1"]
+      - expression: "_range: float < 0.5"
+        content:
+          - name: accept
+            text: ["-200", "-3.3", "0.4", "0.49999999"]
+          - name: reject
+            text: ["0.5", "0.6", "1.0", "1"]
