--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,17 @@
 *.log
 .*
 
+!.editorconfig
+
 # Folders
 /*/
 
 !/.github/
 !/asset/
 !/go/
-!/lidy-go/
+!/js/
+!/python/
+!/rust/
 !/testdata/
 
 !/.gitignore
