--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,4 +12,4 @@ chrono = "0.4.39"
 
 [dev-dependencies]
 regex = "1.11.1"
-specimen = "0.1.0"
+specimen = { path = "../../specimen/rust", version = "0.1.0" }
